start demo integration

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,8 @@ imports:
     - { resource: services.yml }
 
 framework:
+    serializer:
+        enabled: true
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
@@ -34,7 +36,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        []
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
